--- a/index.css
+++ b/index.css
@@ -3,13 +3,16 @@ body {
   }
   
   h1 {
-    color: white;
+    color: black;
     text-align: center;
   }
-
+  a {
+      text-align: center;
+  }
   p {
     font-family: verdana;
     font-size: 20px;
+    text-align:center;
   }
 
   #link {
