--- a/index.css
+++ b/index.css
@@ -14,8 +14,6 @@ body {
     font-size: 20px;
     text-align:center;
   }
-.link{
+  a.center-text {
     display: block;
-    margin-left: auto;
-    margin-right: auto;
-}
+  }
