--- a/index.css
+++ b/index.css
@@ -1,16 +1,17 @@
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&display=swap');
+
 body {
-    background-color: rgb(65, 79, 83);
+    background-color: lemonchiffon;
   }
   
   h1 {
     color: black;
     text-align: center;
+    font-family: 'Open Sans', sans-serif;
   }
-  img {
-      text-align: center;
-  }
+
   p {
-    font-family: verdana;
+    font-family: 'Open Sans', sans-serif;
     font-size: 20px;
     text-align:center;
   }
