--- a/index.css
+++ b/index.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&display=swap');
 
 body {
-    background-color: lemonchiffon;
+    background-color: moccasin;
   }
   
   h1 {
