color is fixed but width/length need to be fixed

--- a/index.css
+++ b/index.css
@@ -17,6 +17,8 @@ body {
   }
   img{
       margin:auto;
-      width: 40%;
+      aspect-ratio:initial;
+      width: 128px;
+      height: 128px;
       display: block;
   }
