--- a/index.css
+++ b/index.css
@@ -26,7 +26,7 @@ body {
       transform: rotate(15deg);
   }
 
-  .button {
+  button {
     box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19);
     transition-duration: 0.5s;
     background-color:papayawhip;
@@ -34,6 +34,6 @@ body {
     font-family: 'Open Sans', sans-serif;
   }
 
-  .button:hover {
+  button:hover {
       background-color:peachpuff;
   }
