--- a/index.css
+++ b/index.css
@@ -28,12 +28,14 @@ body {
 
   button {
     box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19);
-    transition-duration: 0.5s;
-    background-color:papayawhip;
-    color: black;
+    background-color: papayawhip; /* Green */
+    border: none;
+    color: white;
+    padding: 15px 32px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
     font-size: 16px;
-    font-family: 'Open Sans', sans-serif;
-    border:none;
   }
 
   button:hover {
