--- a/index.css
+++ b/index.css
@@ -1,43 +1,3 @@
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&display=swap');
+@import "https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css";
 
-body {
-    background-color: moccasin;
-  }
-  
-  h1 {
-    color: black;
-    text-align: center;
-    font-family: 'Open Sans', sans-serif;
-  }
-
-  p {
-    font-family: 'Open Sans', sans-serif;
-    font-size: 20px;
-    text-align:center;
-  }
-  img{
-      margin:auto;
-      aspect-ratio:initial;
-      width: 128px;
-      height: 128px;
-      display: block;
-  }
-  .link:hover{
-      transform: rotate(15deg);
-  }
-
-  button {
-    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19);
-    background-color: papayawhip; /* Green */
-    border: none;
-    color: white;
-    padding: 15px 32px;
-    text-align: center;
-    text-decoration: none;
-    display: inline-block;
-    font-size: 16px;
-  }
-
-  button:hover {
-      background-color:peachpuff;
-  }
