updated large portions- navbar fixed + abt me

--- a/index.css
+++ b/index.css
@@ -1,3 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&display=swap');
 @import "https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css";
 
+.p{
+    position: absolute;
+    right: 0;
+}
